[gd_scene load_steps=7 format=2]

[ext_resource path="res://Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/flappy.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 64, 128 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 256, 280 )
scale = Vector2( 256, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 544, 144 )

[node name="TimerSpawnPipes" type="Timer" parent="."]
wait_time = 1.8
autostart = true

[node name="CanvasScore" type="CanvasLayer" parent="."]

[node name="LabelScore" type="Label" parent="CanvasScore"]
margin_left = 8.0
margin_top = 8.0
margin_right = 74.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="TimerSpawnPipes" to="." method="_on_TimerSpawnPipes_timeout"]
